--- a/ML_assessment_.ipynb
+++ b/ML_assessment_.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 3,
       "metadata": {
         "id": "lwZaTDWRHNy1"
       },
@@ -63,7 +63,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -166,7 +166,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -297,7 +297,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -306,7 +306,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -347,7 +347,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -384,7 +384,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -546,7 +546,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 10,
       "metadata": {
         "id": "cqPsuFeBHNy6"
       },
@@ -574,7 +574,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 11,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -590,13 +590,13 @@
             "Euclidean distance between [7, -1] (2D) and [4, 3] (2D) is 5.0\n",
             "Euclidean distance between [1, 2] (2D) and [3, 4] (2D) is 2.828\n",
             "Euclidean distance between [4.2, 3.6, 1.0] (3D) and [5.7, 2.8, -1.5] (3D) is 3.023\n",
-            "Euclidean distance between [0.04557494 0.06486066 0.33328345 0.2258771  0.8065989  0.72129495\n",
-            " 0.72633648 0.48827758 0.73395273 0.07510194 0.21704914 0.86664647\n",
-            " 0.14082897 0.53617755 0.26350641 0.58246241 0.37022202 0.67794893\n",
-            " 0.90363423 0.50645622] (20D) and [0.38316114 0.11312597 0.43122139 0.53999778 0.22555197 0.47170201\n",
-            " 0.36114372 0.19450733 0.5703546  0.87404828 0.00341313 0.98172937\n",
-            " 0.88040885 0.95807518 0.874903   0.85750904 0.29854978 0.35040661\n",
-            " 0.13477413 0.70567082] (20D) is 1.867\n"
+            "Euclidean distance between [0.05755932 0.62233945 0.6404169  0.60610539 0.00966624 0.55017498\n",
+            " 0.25771892 0.78793484 0.54782113 0.0990821  0.81502586 0.10304386\n",
+            " 0.50548393 0.68085221 0.53564954 0.52736981 0.73209942 0.23034606\n",
+            " 0.02028547 0.10886944] (20D) and [0.37933965 0.47076368 0.47473441 0.87899408 0.93902701 0.54032404\n",
+            " 0.16999375 0.87285492 0.33007214 0.18780162 0.22116312 0.85063567\n",
+            " 0.56602368 0.3628107  0.99899387 0.8248331  0.82720418 0.30724505\n",
+            " 0.9346508  0.29753762] (20D) is 1.835\n"
           ]
         }
       ],
@@ -668,7 +668,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 12,
       "metadata": {
         "id": "qnMa0WUtHNy7"
       },
@@ -725,7 +725,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 13,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -848,7 +848,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 14,
       "metadata": {
         "id": "Uy4C-2MGHNy8"
       },
@@ -878,7 +878,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 15,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1007,7 +1007,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 16,
       "metadata": {
         "id": "bAT2L8_RHNy9"
       },
@@ -1031,7 +1031,6 @@
         "        self.min_samples_per_node = min_samples_per_node\n",
         "        self.root = None\n",
         "        self.n_features = n_features\n",
-        "        self.groth = 0\n",
         "\n",
         "    def fit(self, X, y):\n",
         "        print(\"Fitting...\")\n",
@@ -1040,7 +1039,6 @@
         "        return self\n",
         "\n",
         "    def _grow(self, X, y,depth = 0):\n",
-        "        self.groth += 1 \n",
         "        n_samples , n_feat = X.shape\n",
         "        n_labels = len(np.unique(y))\n",
         "        #stop\n",
@@ -1075,7 +1073,7 @@
         "        for i in feat :\n",
         "            X_col = X[:, i]\n",
         "            thresholds = np.unique(X_col)\n",
-        "\n",
+        "    \n",
         "            for threshold in thresholds:\n",
         "                gain = self._info_gain(y, X_col, threshold)\n",
         "                if gain > b_gain:\n",
@@ -1138,22 +1136,21 @@
       ]
     },
     {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "The following code was created using the tutorial found on github & youtube | [How to implement Decision trees from scratch with Python by  AssemblyAI\n",
+        "](https://github.com/AssemblyAI-Examples/Machine-Learning-From-Scratch/tree/main/04%20Decision%20Trees) [Accessed on 03/1/2023]"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "9VMVm46XHNy-"
       },
       "source": [
         "#### TESTING CELLS:"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "AQIN2aLPHNy-"
-      },
-      "source": [
-        "The following code was created using the tutorial found on github & youtube | [How to implement Decision Trees from scratch with Python by  AssemblyAI\n",
-        "](https://github.com/AssemblyAI-Examples/Machine-Learning-From-Scratch/tree/main/04%20Decision%20Trees) [Accessed on 2/1/2023]"
       ]
     },
     {
@@ -1167,7 +1164,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 17,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1184,7 +1181,7 @@
             "Fitting...\n",
             "Sample: [-2.45500e+00  7.00000e-02  2.34400e+00  2.60000e+01  3.21300e+00\n",
             "  3.09993e+02]\n",
-            "\tPredicted class: monoclinic\n",
+            "\tPredicted class: triclinic\n",
             "\tTrue class: orthorhombic\n",
             "Sample: [-2.35200e+00  8.30000e-02  1.36700e+00  2.80000e+01  2.93500e+00\n",
             "  3.57496e+02]\n",
@@ -1204,7 +1201,7 @@
             "\tTrue class: monoclinic\n",
             "Sample: [-2.56400e+00  5.80000e-02  2.73000e+00  2.80000e+01  2.85600e+00\n",
             "  3.60121e+02]\n",
-            "\tPredicted class: orthorhombic\n",
+            "\tPredicted class: monoclinic\n",
             "\tTrue class: orthorhombic\n",
             "Sample: [-2.91100e+00  6.40000e-02  3.07900e+00  3.40000e+01  2.63300e+00\n",
             "  4.31422e+02]\n",
@@ -1237,7 +1234,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 18,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1338,7 +1335,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 72,
+      "execution_count": 19,
       "metadata": {
         "id": "8i-ok5GzHNy_"
       },
@@ -1388,7 +1385,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 70,
+      "execution_count": 20,
       "metadata": {
         "id": "43fE_JfhHNy_"
       },
@@ -1404,10 +1401,10 @@
             "\tClass monoclinic: precision = 0.56, recall = 0.62\n",
             "\tClass orthorhombic: precision = 0.67, recall = 0.60\n",
             "Evaluating numerical dataset, using DecisionTree:\n",
-            "Accuracy = 0.5417, Cohen's Kappa = 0.2960\n",
-            "\tClass triclinic: precision = 0.71, recall = 0.42\n",
-            "\tClass monoclinic: precision = 0.44, recall = 0.69\n",
-            "\tClass orthorhombic: precision = 0.62, recall = 0.50\n"
+            "Accuracy = 0.5208, Cohen's Kappa = 0.2718\n",
+            "\tClass triclinic: precision = 0.62, recall = 0.42\n",
+            "\tClass monoclinic: precision = 0.44, recall = 0.75\n",
+            "\tClass orthorhombic: precision = 0.62, recall = 0.40\n"
           ]
         }
       ],
@@ -1448,7 +1445,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 71,
+      "execution_count": 21,
       "metadata": {
         "id": "OgnDSILEHNzA"
       },
@@ -1523,7 +1520,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "metadata": {
         "id": "4hoXpvpWHNzA"
       },
@@ -1543,12 +1540,22 @@
         "#### YOUR ANSWERS:\n",
         "\n",
         "1. <font color='red'>Answer to question 1</font> \n",
-        "Accuracy the numerator of the amount of correct predictions that the model made. \n",
-        "\n",
-        "\n",
+        "   <br> Accuracy is how often the model correctly classifies a data point correctly. This can be represented as $\\frac{TP+TN}{TP+TN+FP+FN}$. Accuracy is a standard measurement of how well a model performs but it doesnt tell the whole story , with a model we'd like to understand how to optimize the model. \n",
+        "   <br>Precision and recall helps us understand how to optimise the model better. Precision is the propotion of positive identifications that are correct and can be represented as the following, $\\frac{TP}{TP+FP}$. Recall is the proportion of actual postives that were identified correctly and can be represented as $\\frac{TP}{TP+FN}$. We can use both of these metrics to know what to optimize for. \n",
+        "   <br>Cohens Kappa metric goes even further in evaluating the model. Represented as $\\frac{p_0-p_e}{1-p_e}$ , where $p_0$ is the overall accuracy of the model and $p_e$ is the measure of agreement between the models predictions and the actual class values happening by chance.Cohens kappa removes the possibility of the classifer and a random guess agreeing and measures predictions that could not be explained by a random guess. Essentially cohens kappa tries to correct the bias with evaluation by taking into account the correct classification by random guess.\n",
+        "   <br> An alternative approach to measuring the performance of the model is by measing the f-score, represented as $\\frac{2}{recall^{-1}+ precision^{-1}}$. F-score is the harmonic mean of the precision and recall and an example of a perfect metric for a model would be 1. This is useful incase their is a large class imbalance, where the accuracy of the model would be missleading. Since the accuacy of the two models are very similar in our case, we can use this metric to further measure what needs to be optimized.\n",
+        "   <br><br>\n",
         "2. <font color='red'>Answer to question 2</font> \n",
+        "   <br> When handling very large datasets KNN tends to be slower since it scans the whole dataset and doesnt generilize the data in advance like a decision tree. There for taking up more memory as more data needs to be retrieved and stored in local memory. In terms of training quickly KNN would be much faster as there is no training step as there is no need to even fit a model as all you need to do is provide data points. The model created with KNN is available in a labeled dataset, placed in a metric space. When reaching a final decision in the context of these datasets, KNN is faster. If the dataset was bigger the decision tree would be faster. We can prove this by looking at the Big O of both algorithms, with n being the number of samples and k the number of atributes. For KNN the Big O is the following $\\text{KNN training} = O(1) \\text{ KNN testing} = O(NK)$. For Decision trees the big O is the following $\\text{DT = training time }\\times \\text{test time}  $ , training time being $O(\\log(N))$ and testing time being $O(N^2 \\times K)$. \n",
+        "   <br><br>\n",
         "3. <font color='red'>Answer to question 3</font> \n",
-        "4. <font color='red'>Answer to question 4</font> "
+        "   <br>  Normalisation scales the datasets variables to be between 0 and 1. In KNN this imporves the time complexity significantly as it reduces the distance between the two feature variables using a distance calulation. As the distance calulation is used to calculate the weights , the results of the KNN will be diffenet.\n",
+        "   <br><br>\n",
+        "4. <font color='red'>Answer to question 4</font> \n",
+        "   <br>\n",
+        "   \n",
+        "\n",
+        "   <br><br>"
       ]
     }
   ],
