--- a/ML_assessment_.ipynb
+++ b/ML_assessment_.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 1,
       "metadata": {
         "id": "lwZaTDWRHNy1"
       },
@@ -63,7 +63,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -166,7 +166,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -297,7 +297,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -306,7 +306,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -347,7 +347,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -384,7 +384,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -546,7 +546,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 8,
       "metadata": {
         "id": "cqPsuFeBHNy6"
       },
@@ -574,7 +574,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -590,13 +590,13 @@
             "Euclidean distance between [7, -1] (2D) and [4, 3] (2D) is 5.0\n",
             "Euclidean distance between [1, 2] (2D) and [3, 4] (2D) is 2.828\n",
             "Euclidean distance between [4.2, 3.6, 1.0] (3D) and [5.7, 2.8, -1.5] (3D) is 3.023\n",
-            "Euclidean distance between [0.05755932 0.62233945 0.6404169  0.60610539 0.00966624 0.55017498\n",
-            " 0.25771892 0.78793484 0.54782113 0.0990821  0.81502586 0.10304386\n",
-            " 0.50548393 0.68085221 0.53564954 0.52736981 0.73209942 0.23034606\n",
-            " 0.02028547 0.10886944] (20D) and [0.37933965 0.47076368 0.47473441 0.87899408 0.93902701 0.54032404\n",
-            " 0.16999375 0.87285492 0.33007214 0.18780162 0.22116312 0.85063567\n",
-            " 0.56602368 0.3628107  0.99899387 0.8248331  0.82720418 0.30724505\n",
-            " 0.9346508  0.29753762] (20D) is 1.835\n"
+            "Euclidean distance between [0.41364691 0.41899662 0.92180037 0.26718951 0.5525151  0.15584024\n",
+            " 0.77836546 0.61719526 0.44592331 0.76874496 0.33517963 0.79249352\n",
+            " 0.03038878 0.18931557 0.18113059 0.03274441 0.56154472 0.14375443\n",
+            " 0.63398587 0.47946772] (20D) and [0.36361632 0.91951264 0.14104085 0.99662126 0.2122351  0.51491538\n",
+            " 0.24494861 0.53987915 0.79979118 0.12940258 0.15322087 0.1981383\n",
+            " 0.86542707 0.28186079 0.88012894 0.45291961 0.57625664 0.30894695\n",
+            " 0.02504262 0.66895921] (20D) is 2.158\n"
           ]
         }
       ],
@@ -668,7 +668,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 10,
       "metadata": {
         "id": "qnMa0WUtHNy7"
       },
@@ -725,7 +725,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 11,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -848,7 +848,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 12,
       "metadata": {
         "id": "Uy4C-2MGHNy8"
       },
@@ -878,7 +878,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 13,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1007,7 +1007,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 23,
       "metadata": {
         "id": "bAT2L8_RHNy9"
       },
@@ -1047,7 +1047,7 @@
         "            leaf_value = most_common_class(y)\n",
         "            return Node(value=leaf_value)\n",
         "\n",
-        "        feat = np.random.choice(n_feat,self.n_features,replace=False)\n",
+        "        feat = list(range(n_feat))\n",
         "        #best split\n",
         "        b_feature, b_threshold = self._best_split(X,y , feat)\n",
         "\n",
@@ -1164,7 +1164,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 24,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1181,7 +1181,7 @@
             "Fitting...\n",
             "Sample: [-2.45500e+00  7.00000e-02  2.34400e+00  2.60000e+01  3.21300e+00\n",
             "  3.09993e+02]\n",
-            "\tPredicted class: triclinic\n",
+            "\tPredicted class: monoclinic\n",
             "\tTrue class: orthorhombic\n",
             "Sample: [-2.35200e+00  8.30000e-02  1.36700e+00  2.80000e+01  2.93500e+00\n",
             "  3.57496e+02]\n",
@@ -1201,7 +1201,7 @@
             "\tTrue class: monoclinic\n",
             "Sample: [-2.56400e+00  5.80000e-02  2.73000e+00  2.80000e+01  2.85600e+00\n",
             "  3.60121e+02]\n",
-            "\tPredicted class: monoclinic\n",
+            "\tPredicted class: orthorhombic\n",
             "\tTrue class: orthorhombic\n",
             "Sample: [-2.91100e+00  6.40000e-02  3.07900e+00  3.40000e+01  2.63300e+00\n",
             "  4.31422e+02]\n",
@@ -1234,7 +1234,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 25,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1335,7 +1335,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 17,
       "metadata": {
         "id": "8i-ok5GzHNy_"
       },
@@ -1385,7 +1385,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 18,
       "metadata": {
         "id": "43fE_JfhHNy_"
       },
@@ -1401,10 +1401,10 @@
             "\tClass monoclinic: precision = 0.56, recall = 0.62\n",
             "\tClass orthorhombic: precision = 0.67, recall = 0.60\n",
             "Evaluating numerical dataset, using DecisionTree:\n",
-            "Accuracy = 0.5208, Cohen's Kappa = 0.2718\n",
-            "\tClass triclinic: precision = 0.62, recall = 0.42\n",
-            "\tClass monoclinic: precision = 0.44, recall = 0.75\n",
-            "\tClass orthorhombic: precision = 0.62, recall = 0.40\n"
+            "Accuracy = 0.5000, Cohen's Kappa = 0.2381\n",
+            "\tClass triclinic: precision = 0.50, recall = 0.42\n",
+            "\tClass monoclinic: precision = 0.41, recall = 0.56\n",
+            "\tClass orthorhombic: precision = 0.62, recall = 0.50\n"
           ]
         }
       ],
@@ -1445,7 +1445,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 19,
       "metadata": {
         "id": "OgnDSILEHNzA"
       },
@@ -1470,7 +1470,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "/home/jacob/.local/lib/python3.10/site-packages/sklearn/metrics/_classification.py:1334: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+            "c:\\Users\\Jacob\\anaconda3\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1318: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
             "  _warn_prf(average, modifier, msg_start, len(result))\n"
           ]
         }
@@ -1520,7 +1520,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 20,
       "metadata": {
         "id": "4hoXpvpWHNzA"
       },
@@ -1549,7 +1549,7 @@
         "   <br> When handling very large datasets KNN tends to be slower since it scans the whole dataset and doesnt generilize the data in advance like a decision tree. There for taking up more memory as more data needs to be retrieved and stored in local memory. In terms of training quickly KNN would be much faster as there is no training step as there is no need to even fit a model as all you need to do is provide data points. The model created with KNN is available in a labeled dataset, placed in a metric space. When reaching a final decision in the context of these datasets, KNN is faster. If the dataset was bigger the decision tree would be faster. We can prove this by looking at the Big O of both algorithms, with n being the number of samples and k the number of atributes. For KNN the Big O is the following $\\text{KNN training} = O(1) \\text{ KNN testing} = O(NK)$. For Decision trees the big O is the following $\\text{DT = training time }\\times \\text{test time}  $ , training time being $O(\\log(N))$ and testing time being $O(N^2 \\times K)$. \n",
         "   <br><br>\n",
         "3. <font color='red'>Answer to question 3</font> \n",
-        "   <br>  Normalisation scales the datasets variables to be between 0 and 1. In KNN this imporves the time complexity significantly as it reduces the distance between the two feature variables using a distance calulation. As the distance calulation is used to calculate the weights , the results of the KNN will be diffenet.\n",
+        "   <br>  Normalisation scales the datasets variables to be between 0 and 1. In KNN this imporves the time complexity significantly as it reduces the distance between the two feature variables using a distance calculation. As the distance calculation is used to calculate the weights , the results of the KNN will be diffenet.\n",
         "   <br><br>\n",
         "4. <font color='red'>Answer to question 4</font> \n",
         "   <br>\n",
@@ -1565,7 +1565,7 @@
       "toc_visible": true
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "base",
       "language": "python",
       "name": "python3"
     },
@@ -1579,11 +1579,11 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.6"
+      "version": "3.9.12"
     },
     "vscode": {
       "interpreter": {
-        "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
+        "hash": "ebfb2b256e1a9040d98e64162fa090ace91e809b551a2a06e59be57ef64eb9a2"
       }
     }
   },
