--- a/ML_assessment_.ipynb
+++ b/ML_assessment_.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 41,
       "metadata": {
         "id": "lwZaTDWRHNy1"
       },
@@ -63,7 +63,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 42,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -166,7 +166,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 43,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -297,7 +297,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 44,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -306,7 +306,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 45,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -347,7 +347,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 46,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -384,7 +384,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 47,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -546,7 +546,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 48,
       "metadata": {
         "id": "cqPsuFeBHNy6"
       },
@@ -574,7 +574,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 49,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -590,13 +590,13 @@
             "Euclidean distance between [7, -1] (2D) and [4, 3] (2D) is 5.0\n",
             "Euclidean distance between [1, 2] (2D) and [3, 4] (2D) is 2.828\n",
             "Euclidean distance between [4.2, 3.6, 1.0] (3D) and [5.7, 2.8, -1.5] (3D) is 3.023\n",
-            "Euclidean distance between [0.41364691 0.41899662 0.92180037 0.26718951 0.5525151  0.15584024\n",
-            " 0.77836546 0.61719526 0.44592331 0.76874496 0.33517963 0.79249352\n",
-            " 0.03038878 0.18931557 0.18113059 0.03274441 0.56154472 0.14375443\n",
-            " 0.63398587 0.47946772] (20D) and [0.36361632 0.91951264 0.14104085 0.99662126 0.2122351  0.51491538\n",
-            " 0.24494861 0.53987915 0.79979118 0.12940258 0.15322087 0.1981383\n",
-            " 0.86542707 0.28186079 0.88012894 0.45291961 0.57625664 0.30894695\n",
-            " 0.02504262 0.66895921] (20D) is 2.158\n"
+            "Euclidean distance between [0.49177497 0.92329587 0.70694549 0.19573219 0.5439076  0.36322636\n",
+            " 0.39808601 0.70585483 0.93067751 0.79745432 0.47504761 0.24254669\n",
+            " 0.65815071 0.52272091 0.50991577 0.45264464 0.42455932 0.96860525\n",
+            " 0.91772772 0.58299245] (20D) and [0.78611604 0.74022593 0.32547394 0.05762025 0.45334054 0.38459348\n",
+            " 0.21938395 0.21271515 0.72448092 0.87333526 0.13440583 0.21710603\n",
+            " 0.6015746  0.24232719 0.92663476 0.50602731 0.52110434 0.6317691\n",
+            " 0.08786923 0.88875787] (20D) is 1.377\n"
           ]
         }
       ],
@@ -668,7 +668,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 50,
       "metadata": {
         "id": "qnMa0WUtHNy7"
       },
@@ -725,7 +725,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 51,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -848,7 +848,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 52,
       "metadata": {
         "id": "Uy4C-2MGHNy8"
       },
@@ -878,7 +878,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 53,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1007,7 +1007,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 54,
       "metadata": {
         "id": "bAT2L8_RHNy9"
       },
@@ -1164,7 +1164,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 55,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1234,7 +1234,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 56,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1335,7 +1335,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 57,
       "metadata": {
         "id": "8i-ok5GzHNy_"
       },
@@ -1385,7 +1385,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 58,
       "metadata": {
         "id": "43fE_JfhHNy_"
       },
@@ -1401,9 +1401,9 @@
             "\tClass monoclinic: precision = 0.56, recall = 0.62\n",
             "\tClass orthorhombic: precision = 0.67, recall = 0.60\n",
             "Evaluating numerical dataset, using DecisionTree:\n",
-            "Accuracy = 0.5000, Cohen's Kappa = 0.2381\n",
-            "\tClass triclinic: precision = 0.50, recall = 0.42\n",
-            "\tClass monoclinic: precision = 0.41, recall = 0.56\n",
+            "Accuracy = 0.5417, Cohen's Kappa = 0.2997\n",
+            "\tClass triclinic: precision = 0.67, recall = 0.50\n",
+            "\tClass monoclinic: precision = 0.43, recall = 0.62\n",
             "\tClass orthorhombic: precision = 0.62, recall = 0.50\n"
           ]
         }
@@ -1445,7 +1445,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 59,
       "metadata": {
         "id": "OgnDSILEHNzA"
       },
@@ -1520,7 +1520,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 60,
       "metadata": {
         "id": "4hoXpvpWHNzA"
       },
@@ -1552,7 +1552,7 @@
         "   <br> Normalisation scales the datasets variables to be between 0 and 1. In KNN this imporves the time complexity significantly as it reduces the distance between the two feature variables using a distance calculation. As the distance calculation is used to calculate the weights , the results of the KNN will be diffenet.\n",
         "   <br><br>\n",
         "4. <font color='red'>Answer to question 4</font> \n",
-        "   <br> Using a 80/20 split is also known as the Pareto Principle.  Originially for exaplining wealth distrobution \n",
+        "   <br> It'd be much better to use k fold in this situation rather than the split. As k fold gets an equal chance to look at all data samples without overfittting. A 80/20 split leaves a chance that there will be never seen before features in the case of categorical data.\n",
         "   \n",
         "\n",
         "   <br><br>"
