--- a/ML_assessment_.ipynb
+++ b/ML_assessment_.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": 2,
       "metadata": {
         "id": "lwZaTDWRHNy1"
       },
@@ -63,7 +63,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -166,7 +166,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -297,7 +297,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -306,7 +306,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": 23,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -325,20 +325,26 @@
       ],
       "source": [
         "def class_probabilities(y):\n",
-        "    class_probs = {}\n",
-        "    for i in y :\n",
-        "      \n",
-        "      if i not in class_probs.keys():\n",
-        "        class_probs[i] = 1\n",
-        "      else:\n",
-        "        class_probs[i] = class_probs[i] + 1\n",
-        "\n",
-        "    total = sum(class_probs.values())\n",
+        "  \"\"\"\n",
+        "   Iterates through each element in the array\n",
+        "   Calculates the amount of each element in the array\n",
+        "   Divides that by the total amount of the elements in the array and assigns that to a key in a dictionary\n",
+        "   returns the dictionary containing the probability of each element\n",
+        "  \"\"\"\n",
+        "  class_probs = {}\n",
+        "  for i in y :\n",
         "    \n",
-        "    for key in class_probs.keys():\n",
-        "        class_probs[key] = class_probs[key] / total\n",
+        "    if i not in class_probs.keys():\n",
+        "      class_probs[i] = 1\n",
+        "    else:\n",
+        "      class_probs[i] = class_probs[i] + 1\n",
         "\n",
-        "    return class_probs\n",
+        "  total = sum(class_probs.values()) \n",
+        "  \n",
+        "  for key in class_probs.keys():\n",
+        "      class_probs[key] = class_probs[key] / total\n",
+        "\n",
+        "  return class_probs\n",
         "\n",
         "\n",
         "print(f\"{class_probabilities(y_nd)}\")\n",
@@ -347,7 +353,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": 22,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -366,6 +372,10 @@
       ],
       "source": [
         "def most_common_class(y):\n",
+        "  \"\"\"\n",
+        "    Uses the counter function from collections to count the amount of classes in the array\n",
+        "    returns the most common using the most common function\n",
+        "  \"\"\"\n",
         "  counter = Counter(y)\n",
         "  most_common_class = counter.most_common(1)[0][0]  \n",
         "  return most_common_class\n",
@@ -384,7 +394,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -546,13 +556,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": 24,
       "metadata": {
         "id": "cqPsuFeBHNy6"
       },
       "outputs": [],
       "source": [
         "def euclidean_distance(x1, x2):\n",
+        "    \"\"\"\n",
+        "     Returns the square root of the sum of distance A - distance B squared (The euclidean distance calculation)\n",
+        "    \"\"\"\n",
         "    sumOf = 0\n",
         "    try:\n",
         "        for i in range(len(x1)):\n",
@@ -574,7 +587,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -590,13 +603,13 @@
             "Euclidean distance between [7, -1] (2D) and [4, 3] (2D) is 5.0\n",
             "Euclidean distance between [1, 2] (2D) and [3, 4] (2D) is 2.828\n",
             "Euclidean distance between [4.2, 3.6, 1.0] (3D) and [5.7, 2.8, -1.5] (3D) is 3.023\n",
-            "Euclidean distance between [0.49177497 0.92329587 0.70694549 0.19573219 0.5439076  0.36322636\n",
-            " 0.39808601 0.70585483 0.93067751 0.79745432 0.47504761 0.24254669\n",
-            " 0.65815071 0.52272091 0.50991577 0.45264464 0.42455932 0.96860525\n",
-            " 0.91772772 0.58299245] (20D) and [0.78611604 0.74022593 0.32547394 0.05762025 0.45334054 0.38459348\n",
-            " 0.21938395 0.21271515 0.72448092 0.87333526 0.13440583 0.21710603\n",
-            " 0.6015746  0.24232719 0.92663476 0.50602731 0.52110434 0.6317691\n",
-            " 0.08786923 0.88875787] (20D) is 1.377\n"
+            "Euclidean distance between [0.48896104 0.62584424 0.09546294 0.69869177 0.88092988 0.01166977\n",
+            " 0.68690929 0.72532615 0.98083518 0.86791029 0.57742204 0.03889112\n",
+            " 0.60096038 0.26294283 0.30168611 0.67677105 0.8710766  0.90500705\n",
+            " 0.81127903 0.11463001] (20D) and [0.40273666 0.10308737 0.65440134 0.93781407 0.47917706 0.34331582\n",
+            " 0.70756829 0.28701706 0.8369707  0.64032907 0.77240651 0.90019478\n",
+            " 0.67101217 0.04984391 0.49448353 0.82081666 0.65483476 0.58238148\n",
+            " 0.71808278 0.23564291] (20D) is 1.500\n"
           ]
         }
       ],
@@ -668,7 +681,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": 34,
       "metadata": {
         "id": "qnMa0WUtHNy7"
       },
@@ -695,10 +708,10 @@
         "            return np.array([self.predict(x) for x in X])\n",
         "        \n",
         "        # in the following section, you can assume that X is a single n-dimensional sample:\n",
-        "        distances = [self.distance(X, x_train) for x_train in self.X_train]\n",
-        "        indices = np.argsort(distances)[:self.k]\n",
-        "        nearest_labels = [self.y_train[i] for i in indices]\n",
-        "        most_common = Counter(nearest_labels).most_common()\n",
+        "        distances = [self.distance(X, x_train) for x_train in self.X_train] #iterating through training data to work out the distances\n",
+        "        indices = np.argsort(distances)[:self.k] # Argsort tells me the original indices of the original array would be after they are sorted. Giving me the indices of the closest datapoints\n",
+        "        nearest_labels = [self.y_train[i] for i in indices] #Labels of the closest datapoints \n",
+        "        most_common = Counter(nearest_labels).most_common() #Using counter again to get the most common data point\n",
         "        return most_common[0][0]\n",
         "\n",
         "        "
@@ -725,7 +738,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": 35,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -848,13 +861,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": 38,
       "metadata": {
         "id": "Uy4C-2MGHNy8"
       },
       "outputs": [],
       "source": [
         "def entropy(p_per_class):\n",
+        "    \"\"\"\n",
+        "        In this function i implement the entropy function acording to the equation seen above in the notebook\n",
+        "        here i check if the value that is passed into p_per_class is part of the categorical or numrical dataset making it easier to handle\n",
+        "        this avoids calculation errors further on down   \n",
+        "    \"\"\"\n",
         "    sumOfE = 0\n",
         "    if isinstance(p_per_class,list):\n",
         "        for i in p_per_class:\n",
@@ -878,7 +896,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 53,
+      "execution_count": 14,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1007,7 +1025,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 54,
+      "execution_count": 46,
       "metadata": {
         "id": "bAT2L8_RHNy9"
       },
@@ -1022,6 +1040,9 @@
         "        self.value = value\n",
         "\n",
         "    def is_leaf_Node(self):\n",
+        "        \"\"\"\n",
+        "            This function checks if the end of a branch has been reached. since the node has a value , that makes it a leaf node\n",
+        "        \"\"\"\n",
         "        return self.value is not None #checks if the leaf node is in fact a leaf node\n",
         "\n",
         "class DecisionTree:\n",
@@ -1033,48 +1054,55 @@
         "        self.n_features = n_features\n",
         "\n",
         "    def fit(self, X, y):\n",
+        "        \"\"\"\n",
+        "            Growing the tree used later to travese to predict the value \n",
+        "        \"\"\"\n",
         "        print(\"Fitting...\")\n",
-        "        self.n_features = X.shape[1] if not self.n_features else min(X.shape[1], self.n_features)\n",
+        "        self.n_features = X.shape[1] if not self.n_features else min(X.shape[1], self.n_features) #This checks that the number of features in the tree doesnt execede the amount in the dataset\n",
         "        self.root = self._grow(X,y)\n",
         "        return self\n",
         "\n",
         "    def _grow(self, X, y,depth = 0):\n",
-        "        n_samples , n_feat = X.shape\n",
-        "        n_labels = len(np.unique(y))\n",
-        "        #stop\n",
+        "        n_samples , n_feat = X.shape # returns (number of samples , number of features)\n",
+        "        n_labels = len(np.unique(y)) #Finds the amount of unique labels in y\n",
+        "        \n",
+        "        #Checking the stopping criteria\n",
         "        if(depth == self.max_depth or n_labels == 1 or n_samples < self.min_samples_per_node):\n",
-        "            #print(\"poggers\")\n",
         "            leaf_value = most_common_class(y)\n",
         "            return Node(value=leaf_value)\n",
         "\n",
         "        feat = list(range(n_feat))\n",
+        "        \n",
         "        #best split\n",
         "        b_feature, b_threshold = self._best_split(X,y , feat)\n",
         "\n",
         "\n",
         "        #child nodes\n",
-        "        left_indeces , right_indeces = self._split(X[:, b_feature] , b_threshold)\n",
+        "        left_indeces , right_indeces = self._split(X[:, b_feature] , b_threshold) #Using the best threshold and the column that belong to the best features \n",
+        "        \n",
         "        left = self._grow(X[left_indeces, :], y[left_indeces] ,depth+1)\n",
-        "        #print(f\"{self.groth} left :{left.value}\")\n",
         "        right = self._grow(X[right_indeces, :], y[right_indeces], depth+1)\n",
-        "        #print(f\"{self.groth} right :{right.value}\")\n",
         "        return Node(b_feature,b_threshold,left,right)\n",
-        "\n",
-        "    def _most_labels(self,y):\n",
-        "        value = Counter(y).most_common(1)[0][0]\n",
-        "        #print(value)\n",
-        "        return value\n",
-        "\n",
         "        \n",
         "    def _best_split(self,X, y , feat):\n",
+        "        \"\"\"\n",
+        "            This functions finds the best out of all possible thresholds of all possible splits.\n",
+        "        \"\"\"\n",
         "        b_gain = -1\n",
         "        split_index , split_threshold = None , None\n",
         "\n",
         "        for i in feat :\n",
-        "            X_col = X[:, i]\n",
+        "            X_col = X[:, i] # feature column\n",
         "            thresholds = np.unique(X_col)\n",
         "    \n",
         "            for threshold in thresholds:\n",
+        "                \"\"\"\n",
+        "                    I iterate through all possible thresholds and compare the gain to the best previous gain\n",
+        "                    Once the best gain is found i set the new values for \n",
+        "                        - Best gain\n",
+        "                        - The index where the split should take place\n",
+        "                        - The threshold of that split\n",
+        "                \"\"\"\n",
         "                gain = self._info_gain(y, X_col, threshold)\n",
         "                if gain > b_gain:\n",
         "                    b_gain = gain\n",
@@ -1084,6 +1112,11 @@
         "        return split_index, split_threshold\n",
         "    \n",
         "    def _info_gain(self, y , X_col , threshold):\n",
+        "        \n",
+        "        \"\"\"\n",
+        "            Works out the differnce in entropy between the parent node and the child nodes \n",
+        "        \"\"\"\n",
+        "        \n",
         "        parent_entropy = entropy(list(class_probabilities(y).values()))\n",
         "        left_indeces , right_indeces = self._split(X_col , threshold)\n",
         "        if len(left_indeces) == 0 or len(right_indeces) == 0:\n",
@@ -1099,19 +1132,12 @@
         "\n",
         "        return parent_entropy - child_entropy\n",
         "    \n",
-        "    \n",
-        "    \"\"\" \n",
-        "    def _entropy(self,y): \n",
-        "        \n",
-        "        #print(y)\n",
-        "        hist = np.bincount(y)\n",
-        "        ps = hist / len(y)\n",
-        "        print(ps)\n",
-        "        return -np.sum([p* np.log(p) for p in ps if p > 0])\n",
-        "        \n",
-        "    \"\"\"\n",
-        "    \n",
         "    def _split(self, X_col, split_threshold):\n",
+        "        \"\"\"\n",
+        "            This function checks for categorical data and numerical data and returns the indexs of the split\n",
+        "            \n",
+        "            This uses argwhere which returns a numpy array of values where the condition is met \n",
+        "        \"\"\"\n",
         "        left_indeces = np.argwhere(X_col <= split_threshold).flatten()\n",
         "        right_indeces = np.argwhere(X_col > split_threshold).flatten()\n",
         "        if isinstance(X_col,str):\n",
@@ -1164,7 +1190,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 55,
+      "execution_count": 42,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1179,6 +1205,7 @@
           "output_type": "stream",
           "text": [
             "Fitting...\n",
+            "(189, 6)\n",
             "Sample: [-2.45500e+00  7.00000e-02  2.34400e+00  2.60000e+01  3.21300e+00\n",
             "  3.09993e+02]\n",
             "\tPredicted class: monoclinic\n",
@@ -1234,7 +1261,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 56,
+      "execution_count": 17,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1335,7 +1362,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 57,
+      "execution_count": 48,
       "metadata": {
         "id": "8i-ok5GzHNy_"
       },
@@ -1345,6 +1372,14 @@
         "\n",
         "\n",
         "def evaluate(y_true, y_pred):\n",
+        "    \n",
+        "    \"\"\"\n",
+        "        I used sklearns metric functions to claculate the accuracy ,precision ,recall  and cohens kappa\n",
+        "        \n",
+        "        most of this functions is just adding the precision and recall to the required dicitonary\n",
+        "    \"\"\"\n",
+        "    \n",
+        "    \n",
         "    labels = []\n",
         "    precision = {}\n",
         "    recall = {}\n",
@@ -1385,7 +1420,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 58,
+      "execution_count": 36,
       "metadata": {
         "id": "43fE_JfhHNy_"
       },
@@ -1445,7 +1480,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 59,
+      "execution_count": 20,
       "metadata": {
         "id": "OgnDSILEHNzA"
       },
@@ -1520,7 +1555,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 60,
+      "execution_count": 21,
       "metadata": {
         "id": "4hoXpvpWHNzA"
       },
